# mega-dl

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cli.py  core_downloader.py  gui.py  mega_dl.py  pixeldrain_dl.py  pixeldrain_downloader.py  pyproject.toml  requirements.txt  todo
.github/workflows/: python-check.yml
