[tool.poetry]
name = "megadl"
version = "0.1.0"
description = "Multi-host album downloader"
authors = ["Khaled khaledb.yahya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
tqdm = "^4.66.1"
mega-py = "^1.0.8"
tkinterdnd2 = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"